# rust-chaos-raft

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  prometheus.yml  raft.docker.toml  raft.toml  start_cluster.sh
frontend/: .prettierrc  eslint.config.ts  index.html  package.json  vite.config.ts
frontend/src/: App.vue  main.ts  style.css  types.ts
frontend/src/components/icons/: FolderIcon.vue  GitHubIcon.vue  ImageIcon.vue  SearchIcon.vue  SpinnerIcon.vue
frontend/src/components/ui/: UiButton.vue  UiInput.vue
frontend/src/stores/: app.ts
frontend/src/views/: HomeView.vue
raft_core/: Cargo.toml
raft_core/src/: lib.rs  log.rs  message.rs  node.rs  protocol.rs  state.rs  storage.rs
raft_core/src/network/: mem.rs  mod.rs  tcp.rs
raft_node/: Cargo.toml
raft_node/src/: main.rs
src-tauri/: .taurignore  Cargo.toml  config.json  tauri.conf.json
src-tauri/benches/: engine_bench.rs
src-tauri/src/: error.rs  lib.rs
tests/: jepsen.rs  snapshot.rs
tests/common/: mod.rs
